--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,13 +32,15 @@
   </div>
   
   <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name%>
+  </div>
+  
+  <div class="field">
     <%= f.label :age %><br />
     <%= f.number_field :age%>
   </div>
-  
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+
   
   <div class="actions">
     <%= f.submit "Update" %>
