--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,9 +20,9 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-    <div class="field">
+  <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :email%>
+    <%= f.text_field :name%>
   </div>
   <div class="field">
     <%= f.label :age %><br />
